# CSE230

./: .gitignore  Hw1.cabal  LICENSE  Play.hs  README.md  sample.html  stack.yaml
.stack-work/install/x86_64-osx/nightly-2015-09-24/7.10.2/flag-cache/: GLFW-0.5.2.4-7d7fbd719b13f95b952e6ac68c5a685e  GLURaw-1.5.0.3-8ea16a7e807f72af84e6587fd153f840  Hw1-1.0-45eaf3893b4fc8e744010321f2a6d2be  Hw1-1.0-f53c287102d17f4ec594408131d20661  ObjectName-1.1.0.1-f7f0974b4e23acace51ca0870e04b4e9  (+9 more)
Hw2/: Hw2.cabal  stack.yaml
Hw2/src/: Hw2.hs
Hw3/src/: Hw3.hs
Hw4/: Inference.lhs  Interpreter.lhs  KMeans.lhs  List.lhs  MapReduce.lhs
SOE/: README
SOE/haskore/: Readme
SOE/haskore/src/: BasicHaskToMidi.lhs  BasicMidifile.lhs  Basics.lhs  Bitops.lhs  CSound.lhs  CSound_Tutorial.lhs  Chords.lhs  Drums.lhs  Equiv.tex  Fractals.hs  GeneralMidi.lhs  HaskToMidi.lhs  Haskore.hs  HaskoreExamples.lhs  HaskoreLoader.lhs  HaskoreUtils.hs  Intro.tex  LoadMidi.lhs  Midi.lhs  MidiFile.lhs  Monads.hs  NewResolutions.lhs  OutputMidi.lhs  Performance.lhs  PerformanceOld.lhs  ReadMidi.lhs  Related.tex  TestHaskore.lhs  Trill.lhs  Tutorial.aux  Tutorial.bbl  Tutorial.tex  test.orc  test.sco
SOE/haskore/src/Demos/: cascade.mid  cascades.mid  run.mid  selfsim.mid  t1.mid  t2.mid  t3.mid  t4.mid
SOE/haskore/src/Pics/: equiv.eps  haskore.eps  poly.eps
SOE/src/: Animation.lhs  Code.html  Draw.lhs  Fal.lhs  Memo1.lhs  Music.lhs  Perform.lhs  Picture.lhs  Reactimate.lhs  Region.lhs  Robot.lhs  SOE.hs  SimpleGraphics.lhs  Snowflake.lhs  Streams.lhs  _Hw1.hs
hw1/: Hw1.hs  Main.hs  XMLTypes.hs
(+1536 files in other folders)
